fixed extra space on the right

--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,12 @@
     @apply w-full h-full;
   }
 }
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
 .grid-container {
   display: grid;
   grid-template-columns: 60% 40%;
